--- a/compose/galaxy-configurator/templates/nginx/nginx.conf.j2
+++ b/compose/galaxy-configurator/templates/nginx/nginx.conf.j2
@@ -61,6 +61,23 @@ http {
         $vis_d/static/$static_file =404;
     }
 
+    # delegated uploads
+    location {{ GALAXY_PROXY_PREFIX | regex_replace("/$", "") }}/api/upload/resumable_upload {
+      # Disable request and response buffering
+      proxy_request_buffering off;
+      proxy_buffering off;
+      proxy_http_version 1.1;
+
+      # Add X-Forwarded-* headers
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Forwarded-Proto $scheme;
+          
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      client_max_body_size 0;
+      proxy_pass http://rustus:1081;
+    }
+
     rewrite ^/{{ GALAXY_PROXY_PREFIX | regex_replace("^/", "") | regex_replace("/$", "") }}$ /{{ GALAXY_PROXY_PREFIX | regex_replace("^/", "") | regex_replace("/$", "") }}/ last;
   }
 }
