added multi-stage build in Dockerfile

--- a/galaxy/ansible/templates/export_user_files.py.j2
+++ b/galaxy/ansible/templates/export_user_files.py.j2
@@ -142,7 +142,7 @@ if __name__ == "__main__":
     change_path( os.path.join('/tool_deps') )
     change_path( os.path.join(galaxy_root_dir, 'tool-data') )
     change_path( os.path.join(galaxy_root_dir, 'database') )
-    change_path( '/shed_tools/' )
+    change_path( '/tus_upload_store/' )
 
     if os.path.exists('/export/common_htpasswd'):
         shutil.copy('/export/common_htpasswd', '/etc/nginx/htpasswd')
